--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "concurso-gastronomico-api",
-  "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@eslint/json": "^0.12.0",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^10.1.2"
-  }
+    "name": "concurso-gastronomico-api",
+    "version": "1.0.0",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "postinstall": "npx husky install"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "devDependencies": {
+        "@eslint/json": "^0.12.0",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.1.2",
+        "husky": "^8.0.3",
+        "lint-staged": "^15.5.1"
+    }
 }
