--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "type": "module",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "npx husky install"
+        "postinstall": "npx husky install",
+        "start:dev": "node --watch index.js"
     },
     "keywords": [],
     "author": "",
@@ -15,6 +16,7 @@
         "@eslint/json": "^0.12.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.2",
+        "git-commit-msg-linter": "^5.0.8",
         "husky": "^8.0.3",
         "lint-staged": "^15.5.1"
     }
