--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "git-commit-msg-linter": "^5.0.8",
         "husky": "^8.0.3",
         "lint-staged": "^15.5.1"
+    },
+    "dependencies": {
+        "dotenv": "^16.5.0"
     }
 }
