--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "lint-staged": "^15.5.1"
     },
     "dependencies": {
-        "dotenv": "^16.5.0"
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0"
     }
 }
