--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "uuid": "^11.1.0",
+        "validator": "^13.15.0",
         "zod": "^3.24.3"
     }
 }
