--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,13 @@
 {
-  "env": {
-    "node": true,
-    "es2021": true
-  },
-  "extends": ["eslint:recommended", "prettier"],
-  "parserOptions": {
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "rules": {}
+    "env": {
+        "node": true,
+        "es2021": true,
+        "jest": true
+    },
+    "extends": ["eslint:recommended", "prettier"],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "rules": {}
 }
