--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "postinstall": "npx husky install",
+        "test": "jest --passWithNoTests --silent",
+        "test:watch": "npm run test -- --watch",
+        "postinstall": "husky install && prisma generate",
         "start:dev": "node --watch index.js"
     },
     "keywords": [],
@@ -18,6 +19,7 @@
         "eslint-config-prettier": "^10.1.2",
         "git-commit-msg-linter": "^5.0.8",
         "husky": "^8.0.3",
+        "jest": "^29.7.0",
         "lint-staged": "^15.5.1",
         "prisma": "^6.6.0"
     },
