--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "license": "ISC",
     "description": "",
     "devDependencies": {
+        "@babel/cli": "^7.27.2",
+        "@babel/core": "^7.27.1",
+        "@babel/preset-env": "^7.27.2",
         "@eslint/json": "^0.12.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.2",
