--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@babel/core": "^7.27.1",
         "@babel/preset-env": "^7.27.2",
         "@eslint/json": "^0.12.0",
+        "@faker-js/faker": "^9.7.0",
         "eslint": "^8.57.1",
         "eslint-config-prettier": "^10.1.2",
         "git-commit-msg-linter": "^5.0.8",
