--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "bcrypt": "^5.1.1",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
+        "jsonwebtoken": "^9.0.2",
         "uuid": "^11.1.0",
         "validator": "^13.15.0",
         "zod": "^3.24.3"
