--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "swagger-ui-express": "^5.0.1",
         "uuid": "^11.1.0",
         "validator": "^13.15.0",
         "zod": "^3.24.3"
