--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "jest --passWithNoTests --silent",
+        "test": "dotenv -e .env.test -- jest --passWithNoTests --silent",
         "test:watch": "npm run test -- --watch",
-        "test:coverage": "jest --coverage --passWithNoTests --silent",
+        "test:coverage": "npm run test -- --coverage",
         "postinstall": "husky install && prisma generate",
         "start:dev": "node --watch index.js"
     },
@@ -32,6 +32,7 @@
         "@prisma/client": "^6.6.0",
         "bcrypt": "^5.1.1",
         "dotenv": "^16.5.0",
+        "dotenv-cli": "^8.0.0",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "swagger-ui-express": "^5.0.1",
