--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
-POSTGRES_PASSWORD=
-POSTGRES_USER=
-POSTGRES_PORT=
-POSTGRES_HOST=
-POSTGRES_DB=
+PORT=
+DATABASE_URL=
+JWT_ACESS_TOKEN_SECRET=
+JWT_REFRESH_TOKEN_SECRET=
