--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
         "test": "dotenv -e .env.test -- jest --passWithNoTests --silent",
         "test:watch": "npm run test -- --watch",
         "test:coverage": "npm run test -- --coverage",
-        "postinstall": "husky install && prisma generate",
-        "start:dev": "node --watch index.js"
+        "postinstall": "husky && prisma generate",
+        "start:dev": "node --watch index.js",
+        "start": "node index.js",
+        "eslint:check": "eslint src",
+        "prettier:check": "prettier --check src"
     },
     "keywords": [],
     "author": "",
@@ -19,18 +22,19 @@
         "@babel/core": "^7.27.1",
         "@babel/preset-env": "^7.27.2",
         "@eslint/json": "^0.12.0",
-        "@faker-js/faker": "^9.7.0",
-        "eslint": "^8.57.1",
-        "eslint-config-prettier": "^10.1.2",
+        "@faker-js/faker": "^9.8.0",
+        "eslint": "^9.27.0",
+        "eslint-config-prettier": "^10.1.5",
         "git-commit-msg-linter": "^5.0.8",
-        "husky": "^8.0.3",
+        "globals": "^16.1.0",
+        "husky": "^9.1.7",
         "jest": "^29.7.0",
-        "lint-staged": "^15.5.1",
-        "prisma": "^6.6.0"
+        "lint-staged": "^16.0.0",
+        "prisma": "^6.8.2"
     },
     "dependencies": {
-        "@prisma/client": "^6.6.0",
-        "bcrypt": "^5.1.1",
+        "@prisma/client": "^6.8.2",
+        "bcrypt": "^6.0.0",
         "dotenv": "^16.5.0",
         "dotenv-cli": "^8.0.0",
         "express": "^5.1.0",
@@ -38,6 +42,6 @@
         "swagger-ui-express": "^5.0.1",
         "uuid": "^11.1.0",
         "validator": "^13.15.0",
-        "zod": "^3.24.3"
+        "zod": "^3.25.20"
     }
 }
