--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "dotenv-cli": "^8.0.0",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
+        "multer": "^2.0.0",
         "swagger-ui-express": "^5.0.1",
         "uuid": "^11.1.0",
         "validator": "^13.15.0",
