--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "husky": "^9.1.7",
         "jest": "^29.7.0",
         "lint-staged": "^16.0.0",
-        "prisma": "^6.8.2"
+        "prisma": "^6.8.2",
+        "supertest": "^7.1.1"
     },
     "dependencies": {
         "@prisma/client": "^6.8.2",
