--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
               with:
                   node-version: '20'
 
+            - name: Install dependencies
+              run: npm install --include=dev
+
             - name: ESLint
               run: npm run eslint:check
 
