--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,9 @@ jobs:
               with:
                   node-version: '20'
 
+            - name: Create .env.test file
+              run: echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico?schema=public" >> .env.test
+
             - name: Install dependencies
               run: npm install --include=dev
 
