--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,10 @@ jobs:
                   node-version: '20'
 
             - name: Create .env.test file
-              run: echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico?schema=public" >> .env.test
+              run:
+                  echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico?schema=public" >> .env.test
+                  echo "JWT_ACESS_TOKEN_SECRET=secret" >> .env.test
+                  echo "JWT_REFRESH_TOKEN_SECRET=secret2" >> .env.test
 
             - name: Install dependencies
               run: npm install --include=dev
@@ -29,3 +32,29 @@ jobs:
 
             - name: Test
               run: npm run test
+
+    migrate:
+        runs-on: ubuntu-latest
+        needs: check
+        environment: production
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Use Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: '20'
+
+            - name: Make envfile
+              uses: SpicyPizza/create-envfile@v2.0
+              with:
+                  envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+                  envkey_JWT_ACESS_TOKEN_SECRET: ${{ secrets.JWT_ACESS_TOKEN_SECRET }}
+                  envkey_JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
+
+            - name: Install dependencies
+              run: npm ci --include=dev
+
+            - name: Run migrations
+              run: npx prisma migrate deploy
