--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
                   node-version: '20'
 
             - name: Create .env.test file
-              run:
-                  echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico?schema=public" >> .env.test
+              run: |
+                  echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico" >> .env.test
                   echo "JWT_ACESS_TOKEN_SECRET=secret" >> .env.test
                   echo "JWT_REFRESH_TOKEN_SECRET=secret2" >> .env.test
 
             - name: Install dependencies
-              run: npm install --include=dev
+              run: npm ci --include=dev
 
             - name: ESLint
               run: npm run eslint:check
@@ -58,3 +58,14 @@ jobs:
 
             - name: Run migrations
               run: npx prisma migrate deploy
+
+    deploy:
+        runs-on: ubuntu-latest
+        needs: migrate
+        environment: production
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+
+            - name: Deploy to production
+              run: curl "${{ secrets.RENDER_DEPLOY_HOOK_URL }}"
