ci: corrigindo a environment DATABASE_URL

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
             - name: Create .env.test file
               run: |
-                  echo "postgresql://root:password@localhost:5433/concurso-gastronomico" >> .env.test
+                  echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico" >> .env.test
                   echo "JWT_ACESS_TOKEN_SECRET=secret" >> .env.test
                   echo "JWT_REFRESH_TOKEN_SECRET=secret2" >> .env.test
 
