ci: garantindo que a environment development seja usado da forma correta

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,9 @@ jobs:
             - name: Make envfile
               uses: SpicyPizza/create-envfile@v2.0
               with:
-                  envkey_DATABASE_URL_TEST: ${{ secrets.DATABASE_URL_TEST }}
-                  envkey_JWT_ACCESS_TOKEN_SECRET_TEST: ${{ secrets.JWT_ACCESS_TOKEN_SECRET_TEST }}
-                  envkey_JWT_REFRESH_TOKEN_SECRET_TEST: ${{ secrets.JWT_REFRESH_TOKEN_SECRET_TEST }}
+                  envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+                  envkey_JWT_ACCESS_TOKEN_SECRET: ${{ secrets.JWT_ACCESS_TOKEN_SECRET }}
+                  envkey_JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
 
             - name: Install dependencies
               run: npm ci --include=dev
