--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
             - name: Prettier
               run: npm run prettier:check
 
+            - name: Run test
+              run: npm run test
+
     migrate:
         runs-on: ubuntu-latest
         needs: check
