--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,9 @@ jobs:
                   echo "JWT_ACCESS_TOKEN_SECRET=secret" >> .env.test
                   echo "JWT_REFRESH_TOKEN_SECRET=secret2" >> .env.test
 
+            - name: Create uploads directory
+              run: mkdir -p uploads
+
             - name: Install dependencies
               run: npm ci --include=dev
 
