--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,11 +16,12 @@ jobs:
               with:
                   node-version: '20'
 
-            - name: Create .env.test file
-              run: |
-                  echo "DATABASE_URL=postgresql://root:password@localhost:5433/concurso-gastronomico" >> .env.test
-                  echo "JWT_ACCESS_TOKEN_SECRET=secret" >> .env.test
-                  echo "JWT_REFRESH_TOKEN_SECRET=secret2" >> .env.test
+            - name: Make envfile for test
+              uses: SpicyPizza/create-envfile@v2.0
+              with:
+                  envkey_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+                  envkey_JWT_ACCESS_TOKEN_SECRET: ${{ secrets.JWT_ACCESS_TOKEN_SECRET }}
+                  envkey_JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
 
             - name: Create uploads directory
               run: mkdir -p uploads
